<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group>
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_home"
            android:title="@string/drawer_home_text" />

        <!--<item
            android:id="@+id/nav_cycle"
            android:icon="@drawable/ic_directions_bike"
            android:title="Cycling" />

        <item
            android:id="@+id/nav_bus"
            android:icon="@drawable/ic_directions_bus"
            android:title="Bus" />

        <item
            android:id="@+id/nav_plane"
            android:icon="@drawable/ic_home"
            android:title="Plane" />-->
    </group>

    <item android:title="Profile">

        <menu>

            <group android:checkableBehavior="single">

                <item
                    android:id="@+id/nav_profile"
                    android:icon="@drawable/profile_pic"
                    android:title="Profile" />

                <item
                    android:id="@+id/nav_logout"
                    android:icon="@drawable/ic_logout"
                    android:title="@string/drawer_logout_text" />
            </group>
        </menu>
    </item>

    <item android:title="Projects">

        <menu>

            <item
                android:id="@+id/nav_share"
                android:icon="@drawable/ic_check"
                android:title="@string/drawer_completed_text" />

            <item
                android:id="@+id/nav_rate"
                android:icon="@drawable/ic_cancel"
                android:title="@string/drawer_cancelled_text" />
        </menu>
    </item>

</menu>