<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.LoginActivity"
    android:paddingStart="20dp"
    android:paddingEnd="20dp"
    android:background="@color/white">

    <ImageView
        android:id="@+id/signin_logo"
        android:layout_width="250dp"
        android:layout_height="250dp"
        android:src="@drawable/signin_illustration"
        android:layout_marginTop="20dp"
        android:contentDescription="@string/login_image_desc" />

    <TextView
        android:id="@+id/signin_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="5dp"
        android:text="@string/login_to_continue_text"
        android:layout_below="@id/signin_logo"
        android:textStyle="bold"/>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/signin_email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/signin_text"
        app:boxStrokeColor="@color/gray"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/username_text"
            android:textColorHint="@color/gray"
            android:inputType="textEmailAddress"/>
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/signin_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_centerInParent="true"
        android:layout_below="@id/signin_email"
        app:passwordToggleEnabled="true"
        app:boxStrokeColor="@color/gray"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/password_text"
            android:textColorHint="@color/gray"
            android:inputType="textPassword"/>
    </com.google.android.material.textfield.TextInputLayout>

    <RelativeLayout
        android:id="@+id/forgot_password_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/signin_password">

        <CheckBox
            android:id="@+id/rememeber_me_checkbox"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/remember_me_text"
            android:textStyle="normal" />

        <TextView
            android:id="@+id/forgot_password_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/forgot_password_text"
            android:textColor="@color/black"
            android:layout_alignParentEnd="true"
            android:layout_centerVertical="true"
            android:textStyle="normal"
            tools:ignore="RelativeOverlap" />

    </RelativeLayout>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/login_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/login_text"
        android:textStyle="bold"
        android:textColor="@color/black"
        android:fontFamily="@font/poppins_bold"
        android:layout_below="@id/forgot_password_layout"
        android:layout_marginTop="20dp"
        app:cornerRadius="6dp"
        />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        tools:ignore="UselessLeaf"
        android:gravity="center_horizontal"
        android:layout_marginTop="20dp"
        android:layout_below="@id/login_button">

        <TextView
            android:id="@+id/signup_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/new_user_text"
            android:textColor="@color/black"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/signup_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/register_text"
            android:paddingStart="5dp"
            android:textColor="@color/dodger_blue"
            android:textStyle="bold"
            tools:ignore="RtlSymmetry" />
    </LinearLayout>

</RelativeLayout>