<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/dialog_bg">

    <RelativeLayout
        android:id="@+id/top_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/yellow"
        android:paddingStart="10dp"
        android:paddingTop="10dp"
        android:paddingEnd="10dp"
        android:paddingBottom="10dp"
        android:elevation="3dp"
        tools:ignore="RtlSymmetry,UselessLeaf,UselessParent">

        <ImageView
            android:id="@+id/default_cancel_img"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_centerVertical="true"
            android:contentDescription="@string/cancel_dialog_iv_desc"
            android:src="@drawable/ic_close" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:fontFamily="@font/denk_one"
            android:text="@string/dialog_title"
            android:textSize="18sp"
            android:textStyle="bold"
            tools:ignore="RelativeOverlap" />
    </RelativeLayout>

    <TextView
        android:id="@+id/confirmation_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/top_layout"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        android:text="@string/dialog_text"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/confirmation_tv"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="20dp"
        android:orientation="horizontal">

        <ImageButton
            android:id="@+id/default_confirm_button"
            android:layout_width="100dp"
            android:layout_height="35dp"
            android:layout_alignParentStart="true"
            android:layout_marginStart="50dp"
            android:background="@drawable/accept_button_bg"
            android:contentDescription="@string/done_dialog_button_descr"
            android:src="@drawable/ic_done"
            android:tint="@color/white" />

        <ImageButton
            android:id="@+id/default_cancel_button"
            android:layout_width="100dp"
            android:layout_height="35dp"
            android:layout_alignParentEnd="true"
            android:layout_marginEnd="50dp"
            android:background="@drawable/reject_button_bg"
            android:contentDescription="@string/cancel_dialog_button_desc"
            android:src="@drawable/ic_close"
            android:tint="@color/white" />

    </RelativeLayout>
</RelativeLayout>