<?xml version="1.0" encoding="utf-8"?>
<com.google.android.material.card.MaterialCardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    app:cardCornerRadius="10dp"
    app:cardElevation="3dp">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:id="@+id/icon"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="50dp"
            android:src="@drawable/location_img"
            android:layout_centerHorizontal="true"
            tools:ignore="ContentDescription" />

        <TextView
            android:id="@+id/where_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/where_are_you_text"
            android:fontFamily="@font/denk_one"
            android:layout_below="@id/icon"
            android:layout_centerHorizontal="true"
            android:textAppearance="@style/TextAppearance.AppCompat.Large"/>

        <TextView
            android:id="@+id/location_desc"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/location_desc"
            android:fontFamily="@font/antic"
            android:layout_below="@id/where_text"
            android:layout_centerHorizontal="true"
            android:textAlignment="center"
            android:padding="8dp"
            android:textAppearance="@style/TextAppearance.AppCompat.Large" />

        <Button
            android:id="@+id/set_automatically_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"
            android:text="@string/set_automatically_text"
            android:textColor="@color/black"
            android:textStyle="bold"
            android:layout_below="@id/location_desc"
            android:background="@drawable/button_bg"/>

        <Button
            android:id="@+id/set_manually_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="8dp"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"
            android:text="@string/set_manually_text"
            android:textColor="@color/black"
            android:textStyle="bold"
            android:layout_below="@id/set_automatically_button"
            android:background="@drawable/button_bg"/>
    </RelativeLayout>
</com.google.android.material.card.MaterialCardView>